@@ -1,9 +1,0 @@
-#ifndef BM_H
-#define BM_H
-
-#include "db.h"
-
-
-ssize_t BM(char *x, int m, char *y, int n);
-
-#endif
